Fixed falling animation, added background image

--- a/.godot/editor/project_metadata.cfg
+++ b/.godot/editor/project_metadata.cfg
@@ -1,6 +1,6 @@
 [editor_metadata]
 
-executable_path="/Applications/Godot.app/Contents/MacOS/Godot"
+executable_path="C:/Users/Thanushan/godot/Godot_v4.1.1-stable_win64.exe"
 tile_snap_option=0
 tile_snap_subdiv=4.0
 tile_source_sort=0
@@ -26,8 +26,14 @@ Camera2D:scale=true
 RemoteTransform2D:scale=true
 Sprite2D:scale=true
 AnimatedSprite2D:scale=true
+ParallaxBackground:scroll_base_scale=true
+ParallaxBackground:scale=true
 
 [dialog_bounds]
 
-project_settings=Rect2(570, 256, 1800, 1400)
-create_new_node=Rect2(570, 256, 1800, 1400)
+project_settings=Rect2(199, 179, 1475, 729)
+create_new_node=Rect2(364, 124, 1302, 860)
+
+[color_picker]
+
+recent_presets=PackedColorArray(0, 0, 0, 1, 0.051971, 0.051971, 0.0519709, 1, 0.10748, 0.10748, 0.10748, 1)
