--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -12,15 +12,15 @@ dock_floating={}
 dock_split_2=0
 dock_split_3=0
 dock_hsplit_1=0
-dock_hsplit_2=540
-dock_hsplit_3=-540
+dock_hsplit_2=307
+dock_hsplit_3=-358
 dock_hsplit_4=0
 dock_filesystem_split=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://Art/Martial Hero/Sprites/Jump.png")
-dock_filesystem_uncollapsed_paths=PackedStringArray("res://", "res://Art/", "res://Art/Martial Hero/", "res://Art/Martial Hero/Sprites/")
+dock_filesystem_selected_paths=PackedStringArray("res://Art/oak_woods_v1.0/background/background_layer_1.png")
+dock_filesystem_uncollapsed_paths=PackedStringArray("res://", "res://Art/", "res://Art/oak_woods_v1.0/", "res://Art/oak_woods_v1.0/background/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
 dock_5="Inspector,Node,History"
@@ -28,10 +28,10 @@ dock_5="Inspector,Node,History"
 [EditorNode]
 
 open_scenes=PackedStringArray("res://Levels/level_1.tscn", "res://Character/player.tscn")
-current_scene="res://Character/player.tscn"
-center_split_offset=0
+current_scene="res://Levels/level_1.tscn"
+center_split_offset=-323
 selected_default_debugger_tab_idx=0
-selected_main_editor_idx=2
+selected_main_editor_idx=0
 selected_bottom_panel_item=0
 
 [ScriptEditor]
