Added Parallax Background, Made Changes to Map

--- a/.godot/editor/project_metadata.cfg
+++ b/.godot/editor/project_metadata.cfg
@@ -28,6 +28,8 @@ Sprite2D:scale=true
 AnimatedSprite2D:scale=true
 ParallaxBackground:scroll_base_scale=true
 ParallaxBackground:scale=true
+ParallaxLayer:motion_scale=true
+ParallaxLayer:scale=true
 
 [dialog_bounds]
 
